--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,16 @@
         "vector": "cpp",
         "iosfwd": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "cSpell.words": [
+        "bits",
+        "h",
+        "include",
+        "namespace",
+        "std",
+        "stdc",
+        "using",
+        "xdir",
+        "ydir"
+    ]
 }
